adding my files to my repository

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <title>Hello</title>
  <link href="styles/style.css" rel="stylesheet" type="text/css">
   <!--  <link href="https://fonts.googleapis.com/css?family=Lemonada" rel="stylesheet" type="text/css">-->
+  <style type="text/css">
+  body{background-color: red}
+  </style>
+
+  <script type="text/javascript">
+  var log=console.log.bind(this);
+  log("test")
+  </script>
+
   </head>
-  <body>
+  <body background-color="yellow">
     <h1>cheyuexian</h1>
     <p>hello<strong>world</strong></p>
     <img src="images/firefox.jpg" alt="firefox">
@@ -19,6 +28,10 @@
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
     <p>read the<a href="http://www.qq.com">www.qq.com</a> to learn more.</p>
     <button>Change user</button>
+    <script type="text/javascript">
+    var log=console.log.bind(this);
+    log("test2")
+    </script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
